argocd/apps/bootstrap/manifests/nginx-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-app-gateway
  namespace: nginx-gateway
  annotations:
    cert-manager.io/issuer: cloudflare-letsencrypt-prod
spec:
  gatewayClassName: nginx
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.aryat.io"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cloudflare-cert
      allowedRoutes:
        kinds:
        - kind: HTTPRoute
        namespaces:
          from: All
    - protocol: TCP
      port: 25565
      name: minecraft-gateway
      allowedRoutes:
        kinds:
        - kind: TCPRoute
        namespaces:
          from: All
