argocd/apps/bootstrap/manifests/nginx-gateway/https-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https-gateway
  namespace: nginx-gateway
  annotations:
    cert-manager.io/issuer: cloudflare-letsencrypt-prod
spec:
  gatewayClassName: nginx
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.aryat.io"
      tls:
        certificateRefs:
          - kind: Secret
            name: cloudflare-cert
      allowedRoutes:
        kinds:
        - kind: HTTPRoute
        namespaces:
          from: All
