argocd/apps/bootstrap/manifests/nginx-gateway/tcp-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tcp-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - protocol: TCP
      port: 25565
      name: minecraft-gateway
      allowedRoutes:
        kinds:
        - kind: TCPRoute
        namespaces:
          from: All
